# studioloom

./: .env.example  .gitignore  BUILD-SUMMARY.md  CLAUDE.md  CLAUDE.md.bak  CNAME  COMPETITIVE-ANALYSIS-2026.md  COMPETITIVE-SNAPSHOT.md  DELIVERABLES.md  Dimensions3-Spec-Printable.docx  EXTRACTION-SUMMARY.md  PHASE-D-BUILD-SUMMARY.md  PHASE-D-COMPLETION.md  PHASE3_INTEGRATION_GUIDE.md  QUEST_BUILD_SUMMARY.txt  QUEST_INTEGRATION_GUIDE.md  README-EXTRACTION.md  README.md  SAFETY_API_IMPLEMENTATION.md  SAFETY_FILES_MANIFEST.md  SAFETY_IMPLEMENTATION_CHECKLIST.md  StudioLoom-China-Market-Analysis.docx  StudioLoom-Competitive-Analysis.xlsx  TESTING-CHECKLIST.md  VALIDATION_README.md  VALIDATION_SUMMARY.txt  VERCEL_DEPLOYMENT.md  WIZARD_PHASE3_BUILD_NOTES.md  WORKSHOP_PHASES_USAGE_AUDIT.md  cookies.txt  index.html  index2.html  middleware.ts  next.config.ts  package-lock.json  package.json  studioloom-it-audit-2026-04-28.docx  test-cycle-engine.mjs  tsconfig.check.json  vercel.json  (+2 more)
.claude/: launch.json
3delements/: 3d-class-gallery.jsx  3d-rendering-modes-concept.md  asset-library-architecture.md  blue-sky-applications.md  character-showcase.jsx  class-gallery-prototype.jsx  cutscene-prototype.jsx  design-quest-narrative.jsx  design-quest-rpg.jsx  designville-r3f-starter.jsx  discovery-3d-journey.html  discovery-3d-journey.jsx  discovery-builder.jsx  discovery-rooms-prototype.html  discovery-rooms-prototype.jsx  discovery-rooms-v2.html  gallery-architecture.jsx  gallery-migration.sql  (+10 more)
fab-scanner/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
fab-scanner/scripts/: sandbox.py
fab-scanner/src/rules/: common.py
fab-scanner/src/rules/stl/: geometry_integrity.py  informational.py  machine_fit.py  printability.py
fab-scanner/src/rules/svg/: geometry_integrity.py  informational.py  machine_fit.py  operation_mapping.py  raster.py
fab-scanner/src/schemas/: ruleset_version.py  scan_results.py
fab-scanner/src/worker/: email_dispatch.py  main.py  observability.py  scan_runner.py  storage.py  supabase_client.py  supabase_real.py  svg_bbox.py  svg_loader.py  thumbnail.py  thumbnail_svg.py
fab-scanner/tests/: conftest.py  test_email_dispatch.py  test_rules_stl_geometry.py  test_rules_stl_informational.py  test_rules_stl_machine.py  test_rules_stl_printability.py  test_rules_svg_geometry.py  test_rules_svg_informational.py  test_rules_svg_machine.py  test_rules_svg_operation.py  test_rules_svg_raster.py  test_scan_runner.py  test_scan_runner_svg.py  test_supabase_real.py
(+3048 files in other folders)
